--- a/.gitignore
+++ b/.gitignore
@@ -48,5 +48,6 @@ po/*~
 # RStudio Connect folder
 rsconnect/
 
-# other files
+# other files from jxnpass
 Data/cleaned_data.csv
+Data/crime_num.csv
